fix styling bug with fullscreen scroll wheel visible

--- a/client/frontend/master-style.css
+++ b/client/frontend/master-style.css
@@ -20,7 +20,8 @@
 
 body {
   font-family: 'Lexend', sans-serif !important;
-  height: 100vh;
+  max-height: 100%;
+  overflow: hidden;
   background-color: #1f1f1f;
   color: #e3e3e3;
 
